# gui

./: .editorconfig  .gitignore  Cargo.toml  Cross.toml  README.md  api.http  build.rs  deny.toml  eslint.config.js  eslint.config.ts  flake.nix  index.html  package.json  rustc-ice-2026-03-08T12_59_15-12760.txt  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts
.cargo/: config.toml
.github/workflows/: build.yml  publish.yml  test.yml
assets/fonts/: HarmonyOS_Sans_SC.ttc
scripts/: dkms.ts  install.ps1  install.sh
src/: App.vue  addons.rs  auto-imports.d.ts  components.d.ts  ipc.rs  lib.rs  main.rs  main.ts  preset.ts  server.rs  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: download_error.rs  download_multi.rs  download_single.rs  event.rs  format_dir.rs  format_progress.rs  gen_unique_path.rs  lib.rs  log_if_err.rs  main.rs  prefetch.rs  puller.rs  reader.rs  relaunch.rs  server.rs  updater.rs
src/binding/: download-multi.ts  download-single.ts  focus-window.ts  format-dir.ts  gen-unique-path.ts  notification.ts  open.ts  prefetch.ts  relaunch.ts  select-dir.ts  stop-download.ts
src/components/: CreateTask.vue  DetailPage.vue  DownloadItem.vue  HomePage.vue  IconBtn.vue  SettingsPage.vue  UpdatePage.vue
src/core/: app.rs  download.rs  mod.rs  progress.rs  start.rs  task.rs
src/fmt/: mod.rs  size.rs  time.rs
src/interface/: create-download-options.d.ts  download_multi.d.ts  download_single.d.ts  event.d.ts  gen_unique_path.d.ts  prefetch.d.ts  updater.d.ts
src/os/: admin.rs  attach_console.rs  auto_start.rs  mod.rs  spawn_self.rs  tray.rs  wakeup.rs
src/pages/: index.vue
src/persist/: config.rs  entry.rs  mod.rs
src/persist/loader/: mod.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
src/plugins/: index.ts  vuetify.ts
src/router/: index.ts
src/stores/: app.ts
src/styles/: index.css  settings.scss
src/utils/: accept-update.ts  auto_ext.rs  build-header.ts  colors.ts  deep-clone.ts  dialog.rs  diff-config.ts  download-multi.ts  download-single.ts  focus-window.ts  font.rs  force_send.rs  format-dir.ts  format-size.ts  format-time.ts  gen-unique-path.ts  header.rs  invert-progress.ts  is_url.rs  log.rs  merge-config.ts  merge-progress.ts  mod.rs  mutex.ts  oklch2rgb.ts  open.ts  prefetch.ts  relaunch.ts  remove-undefined.ts  sanitize.rs  space.rs  stop-download.ts  wakeup.rs  write-method-options.ts
ui/: app-window.slint  aside.slint  divider.slint  entry.slint  headers.slint  info.slint  list.slint  logic.slint  my-spin-box.slint  settings.slint  task-dialog.slint  theme.slint  tooltip.slint  types.slint
util/: .dkms.state.json5  Cargo.toml  package.json  util.d.ts  util.js  util_bg.js  util_bg.wasm  util_bg.wasm.d.ts
util/src/: lib.rs
util/src/fmt/: mod.rs  size.rs  time.rs
