[package]
name = "fast-down-gui"
version = "0.1.37"
edition = "2024"
license = "MIT"
authors = ["share121 <2854631158@qq.com>"]
repository = "https://github.com/fast-down/gui"
readme = "README.md"
exclude = ["/.github"]
description = "超级快的下载器图形化界面"
documentation = "https://docs.rs/fast-down-gui"
homepage = "https://github.com/fast-down/gui"
keywords = ["concurrency", "downloader", "parallel", "performance", "thread"]
categories = ["asynchronous", "concurrency", "network-programming"]

[[bin]]
name = "fast-down"
path = "src/main.rs"

[dependencies]
arboard = "3.6.1"
auto-launch = "0.6.0"
axum = "0.8.8"
bitcode = { version = "0.6.9", features = ["serde"] }
color-eyre = "0.6.5"
crossfire = "3.1.3"
dashmap = { version = "6.1.0", features = ["serde"] }
dirs = "6.0.0"
fast-down-ffi = { version = "0.1.4", features = ["serde"] }
# fast-down-ffi = { path = "../ffi-core/", version = "0.1.4" }
i-slint-backend-winit = "1.15.1"
interprocess = { version = "2.4.0", features = ["tokio"] }
itertools = "0.14.0"
lazy_static = "1.5.0"
mimalloc = "0.1.48"
open = "5.3.3"
parking_lot = { version = "0.12.5", features = ["serde"] }
rfd = "0.17.2"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["rc"] }
showfile = "0.1.1"
slint = { version = "1.15.1", features = ["backend-winit"] }
soft-canonicalize = "0.5.4"
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }

[build-dependencies]
slint-build = "1.15.1"
winresource = "0.1.30"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_Console",
] }

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
codegen-units = 1

# [lints.clippy]
# all = { level = "deny", priority = -1 }
# pedantic = { level = "deny", priority = -1 }
# nursery = { level = "deny", priority = -1 }
# cargo = { level = "deny", priority = -1 }
# # restriction = { level = "deny", priority = -1 }
# multiple_crate_versions = "allow"

[package.metadata.bundle]
name = "FastDown"
identifier = "top.s121.fd"
icon = ["assets/icon.png"]
copyright = "Copyright (c) 2026 fast-down"
category = "Utilities"
short_description = "超级快的下载器"
long_description = """
超级快的下载器图形化界面
"""
