[package]
name = "app"
version = "0.1.0"
description = "fast-down 多线程下载器的 GUI 版本"
authors = ["share121 <2854631158@qq.com>", "Cyan Changes <contact@cyans.me>"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = [] }
tauri-plugin-log = "2"
fast-pull = "2.1.5"
reqwest = { version = "0.12.22", features = [
  "brotli",
  "deflate",
  "gzip",
  "macos-system-configuration",
  "socks",
  "zstd",
  "http2",
], default-features = false }
bytes = "1.10.1"
futures = "0.3.31"
url = "2.5.4"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.12"
tauri-plugin-dialog = "2"
path-clean = "1.0.1"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
