[package]
name = "fast-down"
version = "0.1.0"
description = "fast-down 多线程下载器的 GUI 版本"
authors = ["share121 <2854631158@qq.com>", "Cyan Changes <contact@cyans.me>"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fast_down_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
fast-pull = "3.0.5"
reqwest = { version = "0.12.22", features = [
  "brotli",
  "deflate",
  "gzip",
  "zstd",
  "system-proxy",
  "socks",
  "http2",
  "rustls-tls",
], default-features = false }
bytes = "1.10.1"
futures = "0.3.31"
url = "2.5.4"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.12"
path-clean = "1.0.1"
spin = { version = "0.10.0", features = [
  "spin_mutex",
], default-features = false }
tauri = { version = "2.7.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

[target.'cfg(unix)'.dependencies]
libz-sys = "1.1.22"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
